--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <img id="e" src="icons/eraser.png">
         <img id="download" src="icons/download.png">
         <img id="upload" src="icons/upload.png">
-        <img src="icons/undo.png">
-        <img src="icons/redo.png">
+        <img id="undo" src="icons/undo.png">
+        <img id="redo" src="icons/redo.png">
         <img id="sticky" src="icons/sticky-notes.png">
     </div>
 
